[package]
name = "axin_apc_simulator"
authors = ["Hector Medina Abarca <hfm5@med.harvard.edu>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hmedina/XPS"
license = "MIT"
description = "A bond simulator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
itertools = "0.10.3"
petgraph = "0.6.0"
rand = "0.8.4"
